--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Another Delta.t fix
+
 1.302013  2015-10-02 21:51:45-07:00 America/Los_Angeles
 
     - Fix Util.t for some Term::ReadKey versions
