--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 {{$NEXT}}
 
     - Typo fixes in Test::Stream docs
+    - Remove unused variable
 
 1.302016  2015-10-12 18:49:35-07:00 America/Los_Angeles
 
