Fix incorrect module versions
I made a mistake when determining the module versions. Per
recommendation from the toolchain gand I have set all core module
versions to 0, and will bump them higher if we find that things do not
work below specific versions.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 {{$NEXT}}
 
+    - Change minimum module versions (they were wrong)
     - Typo fixes in Test::Stream docs
     - Remove unused variable
 
