--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     - Change minimum module versions (they were wrong)
     - Typo fixes in Test::Stream docs
     - Remove unused variable
+    - Fix Compare line number bug
 
 1.302016  2015-10-12 18:49:35-07:00 America/Los_Angeles
 
