--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes, just removing trial
+
 1.302019  2015-10-28 22:32:06-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Declare Test::Stream experimental phase complete
