--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    * Change Delta.pm to use a grep instead of a map (minor change)
+
 1.302021  2015-10-31 08:15:22-07:00 America/Los_Angeles
 
     * Remove all number vs string guessing
