--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 {{$NEXT}}
 
     - Doc fix (fixes #52)
+    - Doc fixes for FromTestBuilder
 
 1.302025  2015-11-06 16:33:06-08:00 America/Los_Angeles (TRIAL RELEASE)
 
