--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 {{$NEXT}}
 
+    - No functional changes since the last trial
     - Doc fix (fixes #52)
     - Doc fix (fixes #55)
+    - Doc fix in Classic bundle
     - Doc fixes for FromTestBuilder
 
 1.302025  2015-11-06 16:33:06-08:00 America/Los_Angeles (TRIAL RELEASE)
