--- a/README
+++ b/README
@@ -337,5 +337,5 @@ COPYRIGHT
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
 
-    See http://www.perl.com/perl/misc/Artistic.html
+    See http://dev.perl.org/licenses/
 
