--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Pull out guts into Test2 namespace
+
 1.302026  2015-11-09 14:34:30-08:00 America/Los_Angeles
 
     - No functional changes since the last trial
